--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,8 @@ body {
   display: none;
   overflow: auto;
   overflow-x: hidden;
+  max-width: 900px;
+  margin: 0 auto;
 }
 .contenido .panel.activo {
   flex-direction: column;
@@ -287,7 +289,7 @@ body {
   min-height: 90%;
   position: relative;
   display: flex;
-  margin: 2rem auto;
+  margin: 2rem auto !important;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
 }
 .panel-preview img {
